update some math notes and resolve bidirectional link

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ and beautiful night mode.
 </p>
 
 <p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
+Hey, nice to meet you! This notepage is based on Jekyll theme "yet another theme" and backbones of digital garden.
+If you are interested in deploying similar sites, feel free to review my github repository:https://github.com/Wanyuxiang-code/notepage.git.
+You can refer to this page for more information: https://notes.oldwinter.top/
 </p>
